# delta-lakefs-demo

./: .env  README.md  docker-compose.yml  justfile  pyproject.toml
delta_lakefs_demo/: repo.py  utils.py
delta_lakefs_demo/assets/: __init__.py  asset_downstream.py  asset_upstream.py
delta_lakefs_demo/lakefs/: __init__.py  job.py  resource.py
notebooks/: multi-table-transactions.ipynb  single-table-transactions.ipynb
